--- a/app/src/main/res/layout/keys.xml
+++ b/app/src/main/res/layout/keys.xml
@@ -217,7 +217,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Slow"
+            android:text="⚙"
             android:textSize="9sp" />
     </LinearLayout>
     <LinearLayout
